--- a/about.htm
+++ b/about.htm
@@ -54,7 +54,10 @@
 		  <div class="container main-menu">
 			  <div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-				  <img src="img/logo.png" alt="" title="" style="width:100px; height:60px;"/>
+					<a href="index.htm">
+				  <img src="img/pic.png" alt="chameleon" title="" style="width:100px; height:60px;"/>
+				  </a>
+
 				</div>
 				<nav id="nav-menu-container">
 				  <ul class="nav-menu">
