--- a/about.htm
+++ b/about.htm
@@ -127,7 +127,7 @@
 								</div>
 								<div class="desc-wrap">
 									<p>
-										If you are a serious astronomy fanatic like a lot of us are,then explore our e-library.
+										If you are a serious astronomy fanatic like a lot of us are,then explore our e-library to access the essential resourses.
 									</p>
 									<a href="#">Join Now</a>									
 								</div>
@@ -247,7 +247,7 @@
 								<h4>Our services</h4>
 								<ul>
 									<li>Online classes</li>
-									<li>Classroom claases</li>
+									<li>Classroom classes</li>
 									<li>Home tutions</li>
 									<li>Personal live tutions</li>
 									<li>Educational consultancy</li>
