--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
 								</div>
 								<div class="desc-wrap">
 									<p>
-										If you are a serious astronomy fanatic like a lot of us are,then explore our e-library.
+										If you are a serious astronomy fanatic like a lot of us are,then explore our e-library to access the essential resourses.
 									</p>
 									<a href="#">Join Now</a>									
 								</div>
@@ -185,7 +185,7 @@
 								<div class="details">
 									<a href="#">
 										<h4>
-											Classroom Clases
+											Classroom Classes
 								
 									   </h4>
 									</a>
