--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
 			  <div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
 					<a href="index.htm">
-						<img src="img/pic.png" alt="chameleon" title="" style="width:100px; height:60px;"/>
+						<img src="img/pic.png" alt="chameleon" title="" />
 						</a>
 				</div>
 				<nav id="nav-menu-container">
