--- a/index.htm
+++ b/index.htm
@@ -56,6 +56,7 @@
 				<div id="logo">
 					<a href="index.htm">
 						<img src="img/pic.png" alt="chameleon" title="" />
+						<h2 style="float:right; font-size:30px; color:white; margin-top:30px;">&nbsp;Chameleon classes</h2>
 						</a>
 				</div>
 				<nav id="nav-menu-container">
