--- a/index.htm
+++ b/index.htm
@@ -55,8 +55,11 @@
 			  <div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
 					<a href="index.htm">
-						<img src="img/pic.png" alt="chameleon" title="" />
-						<h2 style="float:right; font-size:30px; color:white; margin-top:30px;">&nbsp;Chameleon classes</h2>
+						<div >
+						<img style="float:left;"src="img/pic.png" alt="chameleon" title="" />
+						
+						<h3 style="color:white; float:right; margin-top:30px;">&nbsp;Chameleon classes</h3>
+					</div>
 						</a>
 				</div>
 				<nav id="nav-menu-container">
